# ticketbee-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  END-TO-END.md  README.md  alembic.ini  main.py  pago_test.html  pyproject.toml  test_get_ticket.py
.github/workflows/: deploy-backend.yml  deploy-functions.yml
app/: config.py  database.py  main.py
app/auth/: router.py  service.py
app/core/: config.py  database.py  responses.py  security.py
app/infrastructure/: acs_email_local.py  blob_storage.py  service_bus.py
app/models/: __init__.py  adjunto.py  cliente.py  dispositivo.py  garantia.py  pago.py  servicio.py  tecnico.py  ticket.py  ticket_model.py  tipo_dispositivo.py
app/repositories/: adjunto_repository.py  cliente_repository.py  dispositivo_repository.py  servicio_repository.py  tecnico_repository.py  ticket_repository.py
app/routers/: adjuntos.py  auth.py  catalogo.py  clientes.py  dispositivos.py  payments.py  tecnicos.py  tickets.py  tickets_router.py
app/schemas/: adjunto.py  cliente.py  dispositivo.py  servicio.py  tecnico.py  ticket.py  ticket_schema.py
app/services/: attachment_service.py  auth_service.py  catalogo_service.py  cliente_service.py  dispositivo_service.py  mercadopago_service.py  tecnico_service.py  ticket_service.py
app/utils/: security.py
azure_functions/fn_file_ticket/: archivado_logic.py  email_client.py  function_app.py  test_archivado_logic.py
azure_functions/fn_notify_ticket/: auth_client.py  email_client.py  (+4 more)
distribuidos_docs/: TicketBee.docx
migrations/: env.py
scripts/: auth_cli.py  check_db.py  fix_broken_server_defaults.py  init_azure_infra_schema.py  insert_dummy_data.py  test_auth.py
tests/: conftest.py
(+31 files in other folders)
