[project]
name = "techfix-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "azure-servicebus>=7.14.3",
    "azure-storage-blob>=12.29.0",
    "fastapi>=0.136.1",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "aioodbc>=0.5.0",
    "pyodbc>=5.3.0",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
    "mercadopago>=3.3.0",
    "azure-communication-email>=1.1.0",
    "aiohttp>=3.14.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
